@@ -1,3 +1,9 @@
+20150325
+========
+-Updated the encoding of the input URL to avoid problems with some characters. 
+
+
+
 20141125
 ========
 -Added NTLM authentication. 
